# VibeMail

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTORS.md  GEMINI.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
docs/: AI-Integration.md  Architecture.md  Build-and-Packaging.md  Coming-Soon.md  Configuration.md  Home.md  Security.md  Troubleshooting.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: mod.rs  ollama.rs  openai_compat.rs  provider.rs  router.rs  stream.rs  tools.rs
src-tauri/src/auth/: keychain.rs  mod.rs  oauth.rs  token_cache.rs
src-tauri/src/commands/: accounts.rs  ai.rs  drafts.rs  general.rs  imap.rs  mod.rs  search.rs  smtp.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs  schema.rs
src-tauri/src/mail/: idle.rs  imap.rs  mod.rs  parser.rs  retry.rs  smtp.rs  sync.rs  threading.rs
src-tauri/src/search/: index.rs  mod.rs
src/components/AIPanel/: AIPanel.module.css  AIPanel.tsx
src/components/Compose/: Compose.module.css  Compose.tsx
src/components/DraftList/: DraftList.module.css  DraftList.tsx
src/components/InboxList/: InboxList.module.css  InboxList.tsx
src/components/Roundup/: Roundup.module.css  Roundup.tsx  RoundupWindow.module.css  RoundupWindow.tsx
src/components/SearchBar/: SearchBar.module.css  SearchBar.tsx
src/components/ThreadView/: ThreadView.module.css  ThreadView.tsx
src/pages/: AccountSetup.module.css  AccountSetup.tsx  Inbox.module.css  Inbox.tsx  Settings.module.css  Settings.tsx
src/stores/: accounts.ts  ai.ts  drafts.ts  mailboxes.ts  preferences.ts  search.ts  threads.ts
src/utils/: mailbox.ts
