[package]
name = "vibemail"
version = "1.0.0"
edition = "2021"
rust-version = "1.77.2"
license = "MIT OR Apache-2.0"

[[bin]]
name = "vibemail"
path = "src/main.rs"

[lib]
name = "vibemail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Email: IMAP
async-imap = "0.10"
async-native-tls = "0.5"
native-tls = "0.2"

# Email: SMTP
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "builder"] }

# Email: MIME parsing
mail-parser = "0.9"

# Database
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client (for AI API calls)
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Search: FTS via rusqlite + Tantivy for semantic
tantivy = "0.22"

# Keychain
keyring = "3"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OAuth / HTTP utilities
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
sha2 = "0.10"
url = "2"
chrono = { version = "0.4", features = ["serde"] }

# Futures
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
incremental = true
